<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/name_app_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363E6D"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/userName_text_register"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_register"
        android:ems="10"
        android:hint="@string/userName_text_register"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectphoto_imageview_register" />

    <EditText
        android:id="@+id/email_text_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_text_register"
        android:ems="10"
        android:hint="@string/email_text_register"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="@+id/userName_text_register"
        app:layout_constraintStart_toStartOf="@+id/userName_text_register"
        app:layout_constraintTop_toBottomOf="@+id/userName_text_register" />

    <EditText
        android:id="@+id/password_text_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_text_register"
        android:ems="10"
        android:hint="@string/password_text_register"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_text_register"
        app:layout_constraintStart_toStartOf="@+id/email_text_register"
        app:layout_constraintTop_toBottomOf="@+id/email_text_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button_register"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_text_register"
        app:layout_constraintStart_toStartOf="@+id/password_text_register"
        app:layout_constraintTop_toBottomOf="@+id/password_text_register" />

    <TextView
        android:id="@+id/alreadyHave_text_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/alreadyHave_text_registration"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <Button
        android:id="@+id/selectPhoto_button_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/full_rounded_button"
        android:text="@string/selectphoto_imageview_register"
        app:layout_constraintBottom_toBottomOf="@id/selectphoto_imageview_register"
        app:layout_constraintEnd_toEndOf="@id/selectphoto_imageview_register"
        app:layout_constraintStart_toStartOf="@id/selectphoto_imageview_register"
        app:layout_constraintTop_toTopOf="@id/selectphoto_imageview_register" />

    <!--    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>